--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -351,7 +351,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>content-security-policy</artifactId>
-            <version>2.0.0</version>
+            <version>2.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
