--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -277,7 +277,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>8.0.0</version>
+            <version>8.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
