--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -183,7 +183,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>4.0.0</version>
+            <version>4.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
