--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -168,13 +168,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap3-components</artifactId>
-            <version>4.0.0</version>
+            <version>4.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap3-core</artifactId>
-            <version>4.0.0</version>
+            <version>4.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <!-- end of Jahia Forge Modules -->
