--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -161,6 +161,11 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>jahia-developer-tools</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
             <version>4.0.0</version>
             <scope>runtime</scope>
