--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -196,7 +196,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>2.1.0</version>
+            <version>2.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -221,7 +221,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>security-filter-tools</artifactId>
-            <version>2.0.0</version>
+            <version>2.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -350,7 +350,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>sdl-generator-tools</artifactId>
-            <version>2.0.0</version>
+            <version>2.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
