--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-commons-webpack</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
