--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -332,7 +332,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>3.0.0</version>
+            <version>3.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
