--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -183,7 +183,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>4.1.1-SNAPSHOT</version>
+            <version>4.1.1</version>
             <scope>runtime</scope>
         </dependency>
 
