--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -189,7 +189,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>3.2.1-SNAPSHOT</version>
+            <version>3.2.1</version>
             <scope>runtime</scope>
         </dependency>
 
