--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -196,7 +196,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
