--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -264,7 +264,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>8.1.0</version>
+            <version>8.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -308,13 +308,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tabularList</artifactId>
-            <version>8.0.0</version>
+            <version>8.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tags</artifactId>
-            <version>8.1.0</version>
+            <version>8.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
