TECH-202: Add Oracle and MS SQL JDBC drivers (#153)

--- a/package/jdbc-drivers/pom.xml
+++ b/package/jdbc-drivers/pom.xml
@@ -77,6 +77,27 @@
           <artifactId>mariadb-java-client</artifactId>
           <version>${driver.mariadb.version}</version>
       </dependency>
+      <dependency>
+          <groupId>com.oracle.jdbc</groupId>
+          <artifactId>ojdbc8</artifactId>
+          <version>${driver.oracle.version}</version>
+          <exclusions>
+              <exclusion>
+                  <groupId>com.oracle.jdbc</groupId>
+                  <artifactId>ucp</artifactId>
+              </exclusion>
+          </exclusions>
+      </dependency>
+      <dependency>
+          <groupId>com.oracle.jdbc</groupId>
+          <artifactId>orai18n</artifactId>
+          <version>${driver.oracle.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>com.microsoft.sqlserver</groupId>
+          <artifactId>mssql-jdbc</artifactId>
+          <version>${driver.mssql.version}</version>
+      </dependency>
   </dependencies>
   <build>
       <plugins>
