--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -276,7 +276,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>9.1.0</version>
+            <version>9.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
