--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,21 +39,28 @@ jobs:
             - v2-dependencies-{{ checksum "pom.xml" }}
             # fallback to using the latest cache if no exact match is found
             - v2-dependencies-
+      - run:
+          name: Get the code signing certificate
+          command: |
+            CODE_SIGNING_CERTIFICATE_URL=$(echo $CODE_SIGNING_CERTIFICATE_ENCRYPTED_URL | sed -r 's/(.{64})/\1\n/g' | openssl enc -base64 -d -aes-256-cbc -nosalt -md md5 -pass pass:$CODE_SIGNING_CERTIFICATE_ENCRYPTION_PWD)
+            if [ ! -d /home/circleci/source/.codesign/ ]; then
+              mkdir /home/circleci/source/.codesign/
+            fi
+            CODE_SIGNING_CERTIFICATE_URL=${CODE_SIGNING_CERTIFICATE_URL%$'\r'}
+            curl ${CODE_SIGNING_CERTIFICATE_URL} --output /home/circleci/source/.codesign/jahia-code-signing-certificate.p12
       - when:
           condition: <<parameters.is_pull_request>>
           steps:
             - run:
-                # TODO We will want to add the missing profile -Pinstaller,sign-installer-jar,windows-installer,sign-installer-exe
                 name: mvn clean install
-                command: mvn -s .circleci/.circleci.settings.xml -U -e clean install
+                command: mvn -s .circleci/.circleci.settings.xml -U -e clean install -Pinstaller,sign-installer-jar,windows-installer,sign-installer-exe -Djahia.sign.keystore=/home/circleci/source/.codesign/jahia-code-signing-certificate.p12 -Djahia.sign.storepass=$CODE_SIGNING_PWD
       - unless:
           condition: <<parameters.is_pull_request>>
           steps:
             - run:
                 # TODO One day we may want to replace the install by deploy in the name and the command
-                # TODO We will want to add the missing profile too -Pinstaller,sign-installer-jar,windows-installer,sign-installer-exe
                 name: mvn clean install
-                command: mvn -s .circleci/.circleci.settings.xml -U -e clean install
+                command: mvn -s .circleci/.circleci.settings.xml -U -e clean install -Pinstaller,sign-installer-jar,windows-installer,sign-installer-exe -Djahia.sign.keystore=/home/circleci/source/.codesign/jahia-code-signing-certificate.p12 -Djahia.sign.storepass=$CODE_SIGNING_PWD
       - save_cache:
           paths:
             - ~/.m2
@@ -139,7 +146,6 @@ parameters:
     default: ""
 
 workflows:
-  version: 2
   # This one is run only when triggered with the API, using a GitHub action
   pull_request:
     when: << pipeline.parameters.run_pull_request >>
@@ -149,7 +155,9 @@ workflows:
       - build:
           name: PR Build Jahia Pack
           is_pull_request: true
-          context: QA_ENVIRONMENT
+          context:
+            - QA_ENVIRONMENT
+            - jahia-code-signing
           requires:
             - PR Checkout
       - sonar:
@@ -170,7 +178,9 @@ workflows:
       - build:
           name: Build Jahia Pack
           is_pull_request: false
-          context: QA_ENVIRONMENT
+          context:
+            - QA_ENVIRONMENT
+            - jahia-code-signing
           requires:
             - checkout
       - sonar:
