--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -338,7 +338,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>8.1.0</version>
+            <version>8.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
