--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -78,7 +78,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>content-media-manager</artifactId>
-            <version>1.7.0</version>
+            <version>1.8.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
