--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -156,7 +156,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>app-shell</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -276,7 +276,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>9.2.0</version>
+            <version>9.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
