--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,8 @@
     </repositories>
 
     <modules>
+        <module>modules-set-parent</module>
+        <module>docker-distribution-parent</module>
         <module>core-modules</module>
         <module>additional-modules</module>
     </modules>
@@ -106,6 +108,12 @@
             <id>installer</id>
             <modules>
                 <module>jahia-installer-package</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>docker</id>
+            <modules>
+                <module>docker-jahia</module>
             </modules>
         </profile>
     </profiles>
