--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,9 @@ jobs:
           keys:
             - v1-maven-dependencies-{{ checksum "maven_cache_seed" }}
             - v1-maven-dependencies-
+      - setup_remote_docker:
+          version: 19.03.13
+          docker_layer_caching: true
       - run:
           name: Get the code signing certificate
           command: |
@@ -62,7 +65,7 @@ jobs:
           steps:
             - run:
                 name: mvn clean install
-                command: mvn -s .circleci/.circleci.settings.xml -U -e clean install -Pinstaller,sign-installer-jar,windows-installer,sign-installer-exe -Djahia.sign.keystore=/home/circleci/source/.codesign/jahia-code-signing-certificate.p12 -Djahia.sign.storepass=$CODE_SIGNING_PWD
+                command: mvn -s .circleci/.circleci.settings.xml -U -e clean install -Pdocker,installer,sign-installer-jar,windows-installer,sign-installer-exe -Djahia.sign.keystore=/home/circleci/source/.codesign/jahia-code-signing-certificate.p12 -Djahia.sign.storepass=$CODE_SIGNING_PWD
       - unless:
           condition: <<parameters.is_pull_request>>
           steps:
