--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.3.1</version>
+            <version>1.3.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
