--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,24 +66,34 @@ jobs:
             fi
             CODE_SIGNING_CERTIFICATE_URL=${CODE_SIGNING_CERTIFICATE_URL%$'\r'}
             curl ${CODE_SIGNING_CERTIFICATE_URL} --output /home/circleci/source/.codesign/jahia-code-signing-certificate.p12
-      - when:
-          condition: <<parameters.is_pull_request>>
-          steps:
-            - run:
-                name: mvn clean install
-                command: mvn -s .circleci/.circleci.settings.xml -U -e clean install -Pdocker,installer,sign-installer-jar,windows-installer,sign-installer-exe -Djahia.sign.keystore=/home/circleci/source/.codesign/jahia-code-signing-certificate.p12 -Djahia.sign.storepass=$CODE_SIGNING_PWD
+      - run:
+          name: Store project version
+          command: mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec > jahia.version
+      - run:
+          name: Determine tag
+          command: |
+            if [ "current" = "<< pipeline.parameters.PARENT_IMAGE_TAG >>" ]; then
+              cp jahia.version parent.tag
+              cp jahia.version image.tag
+            else
+              echo "<< pipeline.parameters.PARENT_IMAGE_TAG >>" > parent.tag
+              cp parent.tag image.tag
+            fi
+      - run:
+          # TODO One day we may want to replace the install by deploy in the name and the command
+          name: mvn clean install
+          command: mvn -s .circleci/.circleci.settings.xml -U -e -Dparent.tag=`cat parent.tag` -Dimage.tag=`cat image.tag` clean install -Pdocker,installer,sign-installer-jar,windows-installer,sign-installer-exe -Djahia.sign.keystore=/home/circleci/source/.codesign/jahia-code-signing-certificate.p12 -Djahia.sign.storepass=$CODE_SIGNING_PWD
       - unless:
           condition: <<parameters.is_pull_request>>
           steps:
             - run:
-                # TODO One day we may want to replace the install by deploy in the name and the command
-                name: mvn clean install
-                command: mvn -s .circleci/.circleci.settings.xml -U -e clean install -Pdocker,installer,sign-installer-jar,windows-installer,sign-installer-exe -Djahia.sign.keystore=/home/circleci/source/.codesign/jahia-code-signing-certificate.p12 -Djahia.sign.storepass=$CODE_SIGNING_PWD
-            - run:
-                # TODO Until that day, deploy docker image from here
+                # TODO Until that day, only deploy docker image from here
                 name: mvn deploy
                 working_directory: ~/source/docker-jahia
-                command: mvn -s ../.circleci/.circleci.settings.xml -U -e deploy
+                command: mvn -s ../.circleci/.circleci.settings.xml -U -e -Dparent.tag=`cat parent.tag` -Dimage.tag=`cat image.tag` deploy
+      - run:
+          name: Store docker image
+          command: docker save -o image.tar jahia/jahia-opencore:`cat image.tag`
       - save_cache:
           paths:
             - ~/.m2
@@ -96,6 +106,113 @@ jobs:
       #       cp /home/circleci/source/package/jahia-installer-package/target/*.jar /tmp/artifacts/
       #- store_artifacts:
       #     path: /tmp/artifacts/
+      - *persist-workspace
+
+  integration_tests:
+    <<: *workdir
+    docker: # run the steps with Docker
+      - image: circleci/openjdk:8-jdk-stretch
+    # Available types: medium, large, xlarge, 2xlarge https://circleci.com/docs/2.0/configuration-reference/#machine-executor-linux
+    resource_class: xlarge
+    parameters:
+      TESTS_IMAGE:
+        type: string
+        default: "jahia/jahia-opencore_test"
+      BUILD_TESTSIMAGE:
+        type: boolean
+        default: true
+      TESTS_PATH:
+        type: string
+        default: "docker-tests/"
+    steps:
+      - *attach-workspace
+      - setup_remote_docker:
+          version: 19.03.13
+          docker_layer_caching: true
+      - run:
+          name:
+            Prepare artifacts
+            # This command copy the various build artifacts into the /tests/ folder to be later
+          # used by jahia-cli to provision Jahia for testing
+          command: |
+            if [ ! -d << parameters.TESTS_PATH >>artifacts ]; then
+              mkdir -p << parameters.TESTS_PATH >>artifacts
+            fi
+      - run:
+          name: Docker login
+          # This is needed to fetch private docker images (such as Jahia snapshot)
+          command: |
+            echo "$DOCKERHUB_LOGIN"
+            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_LOGIN" --password-stdin
+      - run:
+          name: Load docker image
+          command: docker load -i image.tar
+      - run:
+          name: Spin-up dockerized jahia
+          # At that point we're only sprinning up Jahia and its runtime dependencies,
+          # We are not starting the tests yet since we first want to build the test container (or run from a previously built container) \
+          # Checking the presence of the .env file is there because it's needed by the tests, but to not break ci/cd if variables
+          #   are added to the compose file but not to the environment variables in circleci config.yml
+          command: |
+            set -e
+            cd << parameters.TESTS_PATH >>
+            if [[ ! -e .env ]]; then
+              mv .env.example .env
+            fi
+            echo JAHIA_IMAGE=jahia/jahia-opencore:`cat ../image.tag` >> .env
+            docker-compose -f docker-compose.yml up -d jahia
+          no_output_timeout: 2h
+      - run:
+          # We want to build the test image from scratch with any code change (since that code change could be in the tests themselves)
+          name: Build << parameters.TESTS_IMAGE >> image
+          command: |
+            if [ << parameters.BUILD_TESTSIMAGE >> == true ]; then
+              cd << parameters.TESTS_PATH >>
+              docker build -t << parameters.TESTS_IMAGE >> .
+              docker save -o tests_image.tar << parameters.TESTS_IMAGE >>
+            fi
+      - run:
+          name: Execute tests
+          # Running the tests, note that the reports are copied at the end of execution
+          # We don't need (nor want) this actual step to fail
+          # Failure is determined by counting the number of failed tests in the output report
+          # Note: the timeout env vars are added to address this: https://github.com/docker/compose/issues/3927
+          command: |
+            set -e
+            cd << parameters.TESTS_PATH >>
+            export DOCKER_CLIENT_TIMEOUT=120
+            export COMPOSE_HTTP_TIMEOUT=120
+            docker-compose -f docker-compose.yml up cypress
+            docker cp cypress:/tmp/results ./artifacts
+          no_output_timeout: 2h
+          environment:
+            TESTS_IMAGE: << parameters.TESTS_IMAGE >>:latest
+      - run:
+          name: Export jahia logs
+          when: always
+          command: |
+            set -e
+            cd << parameters.TESTS_PATH >>
+            docker logs jahia > ./artifacts/results/jahia.log
+            docker logs cypress > ./artifacts/results/cypress.log
+      # This is not needed since cypress is going to terminat on failure with exit code 1
+      - run:
+          name: Analyze Test results
+          when: always
+          # This looks at the report and fail the job if one of the test has failed
+          command: |
+            cd << parameters.TESTS_PATH >>
+            if [[ ! -e ./artifacts/results/test_success ]]; then
+              echo "More than one failure found, sending exit signal"
+              exit 1
+            fi
+      - store_test_results:
+          path: << parameters.TESTS_PATH >>artifacts/results/xml_reports
+      - run:
+          name: remove xml results folder
+          command: rm -rf << parameters.TESTS_PATH >>artifacts/results/xml_reports
+      - store_artifacts:
+          path: << parameters.TESTS_PATH >>artifacts/results
       - *persist-workspace
 
   sonar:
@@ -181,6 +298,9 @@ parameters:
   github_repository:
     type: string
     default: ""
+  PARENT_IMAGE_TAG:
+    type: string
+    default: "current"
 
 workflows:
   # This one is run only when triggered with the API, using a GitHub action
@@ -197,6 +317,11 @@ workflows:
             - jahia-code-signing
           requires:
             - PR Checkout
+      - integration_tests:
+          name: Integration tests
+          context: QA_ENVIRONMENT
+          requires:
+            - PR Build Jahia Pack
       - sonar:
           name: PR Sonar analysis of the pull request
           is_pull_request: true
@@ -220,6 +345,11 @@ workflows:
             - jahia-code-signing
           requires:
             - checkout
+      - integration_tests:
+          name: Integration tests
+          context: QA_ENVIRONMENT
+          requires:
+            - Build Jahia Pack
       - sonar:
           name: Sonar analysis
           is_pull_request: false
