--- a/docker-distribution-parent/pom.xml
+++ b/docker-distribution-parent/pom.xml
@@ -10,6 +10,12 @@
 
     <packaging>pom</packaging>
 
+    <properties>
+        <parent.tag>${project.version}</parent.tag>
+        <image.repo></image.repo>
+        <image.tag>${project.version}</image.tag>
+    </properties>
+
     <repositories>
         <repository>
             <id>jahia-public</id>
@@ -103,11 +109,11 @@
                     </executions>
                     <configuration>
                         <dockerfile>Dockerfile</dockerfile>
-                        <repository>jahia/${image-tag}</repository>
-                        <tag>${project.version}</tag>
+                        <repository>jahia/${image.repo}</repository>
+                        <tag>${image.tag}</tag>
                         <buildArgs>
-                            <JAHIA_VERSION>${project.version}</JAHIA_VERSION>
-                            <PACK_VERSION>${project.version}</PACK_VERSION>
+                            <PARENT_TAG>${parent.tag}</PARENT_TAG>
+                            <PROJECT_VERSION>${project.version}</PROJECT_VERSION>
                         </buildArgs>
                     </configuration>
                 </plugin>
