--- a/additional-modules/src/main/assembly/package.xml
+++ b/additional-modules/src/main/assembly/package.xml
@@ -2,15 +2,12 @@
     <id>package</id>
     <includeBaseDirectory>false</includeBaseDirectory>
     <formats>
-        <format>zip</format>
+        <format>jar</format>
     </formats>
     <fileSets>
         <fileSet>
-            <directory>${project.build.directory}</directory>
+            <directory>${project.build.directory}/dependency</directory>
             <outputDirectory>/</outputDirectory>
-            <includes>
-            	<include>modules/**</include>
-            </includes>
         </fileSet>
     </fileSets>
 </assembly>
