--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -47,15 +47,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <groupId>org.jahia.server</groupId>
-        <artifactId>modules-set-parent</artifactId>
+        <groupId>org.jahia.packages</groupId>
+        <artifactId>jahia-packages-parent</artifactId>
         <version>8.0.3.0-SNAPSHOT</version>
-        <relativePath>../modules-set-parent</relativePath>
+        <relativePath></relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-core-modules</artifactId>
     <name>Jahia Core Modules Package</name>
     <packaging>pom</packaging>
+    
+    <properties>
+        <package.sources.skip>true</package.sources.skip>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -368,23 +372,4 @@
             <scope>runtime</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
