--- a/docker-jahia/pom.xml
+++ b/docker-jahia/pom.xml
@@ -4,7 +4,7 @@
         <groupId>org.jahia.server</groupId>
         <artifactId>docker-distribution-parent</artifactId>
         <version>8.0.3.0-SNAPSHOT</version>
-        <relativePath>../docker-distribution-parent</relativePath>
+        <relativePath></relativePath>
     </parent>
     <artifactId>docker-jahia</artifactId>
     <modelVersion>4.0.0</modelVersion>
@@ -33,29 +33,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jahia.server</groupId>
+            <groupId>org.jahia.packages</groupId>
             <artifactId>jahia-core-modules</artifactId>
             <version>${project.version}</version>
             <classifier>provisioning</classifier>
             <type>yaml</type>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>groovy-maven-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 </project>
