--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -371,5 +371,11 @@
             <version>2.1.0</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>ldap</artifactId>
+            <version>4.2.0</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 </project>
