--- a/docker-jahia/Dockerfile
+++ b/docker-jahia/Dockerfile
@@ -1,6 +1,7 @@
+ARG IMAGE_REPO_CLASSIFIER
 ARG PARENT_TAG
 
-FROM jahia/jahia-core:${PARENT_TAG}
+FROM jahia/jahia-core${IMAGE_REPO_CLASSIFIER}:${PARENT_TAG}
 
 ARG PROJECT_VERSION
 ARG C_USER="tomcat"
